--- a/app/src/main/res/layout/activity_view_event_trans_test.xml
+++ b/app/src/main/res/layout/activity_view_event_trans_test.xml
@@ -39,22 +39,22 @@
                     android:text="添加View"
                     android:textAllCaps="false"/>
             </LinearLayout>
-            <com.android.study.example.uidemo.eventtrans.MyViewGroupB
-
+            <com.android.study.example.uidemo.eventtrans.MyViewGroupA
+                android:id="@+id/view_myViewGroupA"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
                 android:background="#12aaba"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <com.android.study.example.uidemo.eventtrans.MyViewGroupA
-                    android:id="@+id/view_myViewGroupA"
+                <com.android.study.example.uidemo.eventtrans.MyViewGroupB
+                    android:id="@+id/view_myViewGroupB"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:background="#eeeeee"
                     android:gravity="center"
                     android:orientation="vertical">
-                    <com.android.study.example.uidemo.eventtrans.MyView
+                    <com.android.study.example.uidemo.eventtrans.MyViewC
                         android:id="@+id/myview"
                         android:layout_width="80dp"
                         android:layout_height="40dp"
@@ -62,9 +62,9 @@
                         android:textStyle="bold"
                         android:textColor="#333333"
                         android:background="#fedcbd"/>
-                </com.android.study.example.uidemo.eventtrans.MyViewGroupA>
+                </com.android.study.example.uidemo.eventtrans.MyViewGroupB>
 
-            </com.android.study.example.uidemo.eventtrans.MyViewGroupB>
+            </com.android.study.example.uidemo.eventtrans.MyViewGroupA>
 
 
 
