--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,13 @@
             android:text="InputDialog 测试"
             android:textAllCaps="false"/>
 
+        <Button
+            android:id="@+id/btn_activity_webview_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="WebView 测试"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
 
