--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,12 @@
             android:layout_height="wrap_content"
             android:text="WebView 测试"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_activity_oom_api_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Android OOM API Test"
+            android:textAllCaps="false"/>
 
     </LinearLayout>
 </ScrollView>
