--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="picker_text_17">#1dc58a</color>
+    <color name="transparent">#00000000</color>
 </resources>
