--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,7 @@
         <item name="android:windowIsFloating">true</item>
     </style>
 
+    <style name="ActivityTheme" parent="android:Theme.Translucent.NoTitleBar">
+    </style>
+
 </resources>
