--- a/app/src/main/res/layout/activity_orientation_test.xml
+++ b/app/src/main/res/layout/activity_orientation_test.xml
@@ -20,4 +20,16 @@
         android:layout_height="wrap_content"
         android:text="手机竖屏"/>
 
+    <Button
+        android:id="@+id/btn_dy_theme_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="动态换肤-day"/>
+
+    <Button
+        android:id="@+id/btn_dy_theme_night"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="动态换肤-night"/>
+
 </LinearLayout>
