--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,13 @@
             android:text="Android8.0 横屏测试"
             android:textAllCaps="false"/>
 
+        <Button
+            android:id="@+id/btn_activity_screen_shot_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="截图测试"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
 
