--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,6 +146,12 @@
             android:layout_height="wrap_content"
             android:text="截图测试"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_activity_download_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="断点续传测试"
+            android:textAllCaps="false"/>
 
     </LinearLayout>
 </ScrollView>
