--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -131,6 +131,25 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_get_gps_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="获取手机gps打开状态"/>
+
+            <Button
+                android:id="@+id/btn_start_system_gps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="打开系统gps设置页面"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
