--- a/app/src/main/res/layout/activity_search_edit_test.xml
+++ b/app/src/main/res/layout/activity_search_edit_test.xml
@@ -7,6 +7,13 @@
     tools:context=".uidemo.search.SearchEditTestActivity"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回"
+        android:layout_marginBottom="10dp"/>
+
     <EditText
         android:id="@+id/et_search"
         android:layout_width="match_parent"
