--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,6 +160,13 @@
             android:text="输入框rv测试"
             android:textAllCaps="false"/>
 
+        <Button
+            android:id="@+id/btn_activity_screen_font_adapter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="屏幕字体适配"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
 
