--- a/app/src/main/res/layout/activity_animation_demo.xml
+++ b/app/src/main/res/layout/activity_animation_demo.xml
@@ -22,4 +22,39 @@
         android:layout_marginLeft="20dp"
         android:background="@drawable/icon_sweeper_circular"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_start_rotate"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="开始旋转动画" />
+        <Button
+            android:id="@+id/btn_stop_rotate"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:text="停止旋转动画"/>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+        <View
+            android:id="@+id/iv_scan_ing"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@drawable/ic_scan_ing"
+            android:layout_centerInParent="true"
+            />
+        <View
+            android:id="@+id/iv_nfc_lock"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:background="@drawable/ic_default_nfc_lock"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
+
 </LinearLayout>
