--- a/app/src/main/res/layout/item_rv_search.xml
+++ b/app/src/main/res/layout/item_rv_search.xml
@@ -1,11 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="46dp"
-    android:gravity="center">
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_icon_selector_rules"
+    android:orientation="vertical"
+    android:padding="10dp">
+
+    <View
+        android:id="@+id/view_pic"
+        android:layout_width="20dp"
+        android:layout_height="40dp"
+        android:background="@drawable/ic_default_nfc_lock" />
+
+    <View
+        android:id="@+id/view_select_or_unSelect"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/ic_item_select" />
+
     <TextView
         android:id="@+id/item_tv_search_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#666666"/>
-</LinearLayout>
+        android:layout_below="@id/view_pic"
+        android:layout_marginTop="10dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="大门门锁"
+        android:textColor="#4C4C4C"
+        android:textSize="13sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:layout_below="@id/item_tv_search_info"
+        android:layout_marginTop="2dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/item_tv_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_pic"
+            android:layout_weight="1"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:text="张三的家"
+            android:textColor="#888888"
+            android:textSize="11sp" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#888888" />
+
+        <TextView
+            android:id="@+id/item_tv_room"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_pic"
+            android:layout_weight="1"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:text="客厅"
+            android:textColor="#888888"
+            android:textSize="11sp" />
+    </LinearLayout>
+</RelativeLayout>
+
