--- a/app/src/main/res/layout/item_rv_search.xml
+++ b/app/src/main/res/layout/item_rv_search.xml
@@ -33,7 +33,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="16dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/item_tv_search_info"
         android:layout_marginTop="2dp"
         android:gravity="center_vertical"
@@ -51,12 +51,14 @@
             android:textColor="#888888"
             android:textSize="11sp" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="12dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#888888" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:text="|"
+            android:textColor="#888888"
+            android:textSize="11sp"/>
 
         <TextView
             android:id="@+id/item_tv_room"
