--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -65,6 +65,23 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btn_file_softLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="文件软链接"/>
+            <Button
+                android:id="@+id/btn_file_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="文件硬链接"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
                 android:id="@+id/btn_package_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
