--- a/app/src/main/res/layout/activity_books_main_test.xml
+++ b/app/src/main/res/layout/activity_books_main_test.xml
@@ -13,4 +13,10 @@
         android:text="《进阶之光》"
         android:onClick="jjzgOnClick"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="打开自己"
+        android:onClick="onClickSelfBtn"/>
+
 </LinearLayout>
