--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -179,6 +179,13 @@
             android:layout_height="wrap_content"
             android:text="深色模式支持"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_activity_third_lib"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="第三方库测试"
+            android:textAllCaps="false"
+            android:onClick="onClickThirdLibTestActivity"/>
 
     </LinearLayout>
 </ScrollView>
