性能优化 test activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -187,6 +187,14 @@
             android:textAllCaps="false"
             android:onClick="onClickThirdLibTestActivity"/>
 
+        <Button
+            android:id="@+id/btn_activity_perform_opt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="性能优化测试"
+            android:textAllCaps="false"
+            android:onClick="openPerformOptActivity"/>
+
     </LinearLayout>
 </ScrollView>
 
