--- a/app/src/main/res/layout/activity_trace_view_use_test.xml
+++ b/app/src/main/res/layout/activity_trace_view_use_test.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".performance_optimization.TraceViewUseTestActivity">
+    tools:context=".performance_optimization.TraceViewUseTestActivity"
+    android:orientation="vertical"
+    android:padding="20dp">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="方法耗时测试"
+        android:onClick="onClickFuncTimeCost"/>
+
+</LinearLayout>
