--- a/app/src/main/res/layout/activity_wu_zhang_ai_test.xml
+++ b/app/src/main/res/layout/activity_wu_zhang_ai_test.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
    <Button
+       android:id="@+id/btn_wuzhangai1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "无障碍测试1"
