--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -122,6 +122,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="获取手机wifi信息"/>
+            <Button
+                android:id="@+id/btn_test_wifi_broadcast"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="获取wifi广播地址"
+                android:onClick="onClickGetWifiBroadcast"/>
 
             <Button
                 android:id="@+id/btn_test_build_info"
@@ -192,7 +198,6 @@
             android:textSize="15sp"
             android:layout_gravity="right"
             android:textColor="#ffffff"/>
-
     </LinearLayout>
 
 </ScrollView>
