--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -173,11 +173,22 @@
 
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="无损FPS实时显示"
-            android:onClick="onClickShowPageFps"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="无损FPS实时显示"
+                android:onClick="onClickShowPageFps"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="调用系统打开文件弹窗"
+                android:onClick="onClickOpenSysFileDialog"/>
+        </LinearLayout>
+
 
         <com.android.study.example.androidapi.views.MyFpsTestView
             android:id="@+id/view_myfps"
