--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -195,6 +195,22 @@
                 android:onClick="onClickOpenSysFileDialog"/>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="判断某个应用是否启动"
+                android:onClick="onClickCheckAppRunning"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="返回系统桌面"
+                android:onClick="onClickBackSystemHome"/>
+        </LinearLayout>
+
 
         <com.android.study.example.androidapi.views.MyFpsTestView
             android:id="@+id/view_myfps"
