--- a/app/src/main/res/layout/activity_books_main_test.xml
+++ b/app/src/main/res/layout/activity_books_main_test.xml
@@ -19,4 +19,10 @@
         android:text="打开自己"
         android:onClick="onClickSelfBtn"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="任务栈测试"
+        android:onClick="onClickTestTaskStack"/>
+
 </LinearLayout>
