基本的activity 跨应用跳转

--- a/myaidlclient/src/main/res/layout/activity_main.xml
+++ b/myaidlclient/src/main/res/layout/activity_main.xml
@@ -25,4 +25,10 @@
         android:text="跳转到ExportedActivity"
         android:onClick="btnTestOpenExportedActivity"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转到Main2Activity"
+        android:onClick="btnOpenMain2Activity"/>
+
 </LinearLayout>
