--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,11 @@
             android:layout_height="wrap_content"
             android:text="读书笔记"
             android:textAllCaps="false"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="回拉子应用"
+            android:onClick="onClickPullSubApp"/>
 
         <Button
             android:layout_width="wrap_content"
