--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,19 @@
         android:orientation="vertical"
         tools:context="com.android.study.example.MainActivity">
 
+        <TextView
+            android:id="@+id/tv_test_info"
+            android:layout_width="100dp"
+            android:layout_height="44dp"
+            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+            android:singleLine="true"
+            android:ellipsize="middle"
+            android:focusable="true"
+            android:freezesText="true"
+            android:focusableInTouchMode="true"
+            android:textIsSelectable="true"
+            />
+
         <Button
             android:id="@+id/btn_books_test"
             android:layout_width="wrap_content"
