--- a/app/src/main/res/layout/activity_local_broadcast_send_demo.xml
+++ b/app/src/main/res/layout/activity_local_broadcast_send_demo.xml
@@ -16,6 +16,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="发送广播信息测试01"
+        android:onClick="onClickSendBroadcastMsg01"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="重启应用"
         android:onClick="onClickReStartApp"/>
 
