--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="WebView文件上传测试"
+            android:textAllCaps="false"
+            android:onClick="onClickTestWebViewUploadFile"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Handler测试"
             android:textAllCaps="false"
             android:onClick="onClickTestHandler"/>
