--- a/app/src/main/res/layout/activity_web_view_upload_file.xml
+++ b/app/src/main/res/layout/activity_web_view_upload_file.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     tools:context=".uidemo.webview.WebViewUploadFileActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="onClickCheckRequestPermissions"
+            android:text="获取权限"/>
+    </LinearLayout>
     <me.jingbin.progress.WebProgress
         android:id="@+id/progress"
         android:layout_width="match_parent"
