--- a/app/src/main/res/layout/activity_photo_view_test.xml
+++ b/app/src/main/res/layout/activity_photo_view_test.xml
@@ -7,11 +7,11 @@
     android:orientation="vertical"
     tools:context=".uidemo.photoview.demo.PhotoViewTestActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:text="切换图片"
-        android:onClick="onClickChangePic"/>
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:text="切换图片"-->
+<!--        android:onClick="onClickChangePic"/>-->
     
     <com.android.study.example.uidemo.photoview.PhotoView
         android:id="@+id/photo_view"
