--- a/app/src/main/res/layout/activity_photo_view_test.xml
+++ b/app/src/main/res/layout/activity_photo_view_test.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/black"
     tools:context=".uidemo.photoview.demo.PhotoViewTestActivity">
 
 <!--    <Button-->
@@ -19,4 +19,21 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/layout_btn_cicle"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_left"
+            android:onClick="onClickChangePic"/>
+
+    </LinearLayout>
+
+</FrameLayout>
