--- a/app/src/main/res/layout/activity_photo_view_test.xml
+++ b/app/src/main/res/layout/activity_photo_view_test.xml
@@ -20,11 +20,11 @@
         android:layout_gravity="center"/>
 
     <LinearLayout
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
         android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="12dp"
         android:background="@drawable/layout_btn_cicle"
         android:orientation="vertical"
         android:onClick="onClickBack"
@@ -42,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:text="测试状态栏"
+        android:textSize="14sp"
         android:layout_marginTop="60dp"
         android:onClick="onClickStatusBarTest"/>
 
