完善 websocket 客户端实现， 可以正常连接服务端；

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,12 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="WebSocket client测试"
+            android:textAllCaps="false"
+            android:onClick="onClickTestWebSocketClient"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="PhotoView 图片显示"
             android:textAllCaps="false"
             android:onClick="onClickTestPhotoView"/>
