--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="锁测试"
+            android:textAllCaps="false"
+            android:onClick="onClickTestThreadLock"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="WebSocket测试"
             android:textAllCaps="false"
             android:onClick="onClickTestWebSocket"/>
