--- a/app/src/main/res/layout/activity_camera2_demo.xml
+++ b/app/src/main/res/layout/activity_camera2_demo.xml
@@ -6,10 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".camera.Camera2DemoActivity">
 
-    <com.android.study.example.camera.AutoFitTextureView
-        android:id="@+id/textureview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.android.study.example.camera.AutoFitTextureView
+            android:id="@+id/textureview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <com.android.study.example.camera.AutoFitTextureView
+            android:id="@+id/textureview_2"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/iv_camera"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/vertical_linear"
