--- a/rtsp-server/src/main/res/layout/activity_rtsp_server.xml
+++ b/rtsp-server/src/main/res/layout/activity_rtsp_server.xml
@@ -4,14 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RtspServerActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="启动server"
-        android:textAllCaps="false"
-        android:onClick="onClickOpenRstpServerPage"
-        />
+    <net.majorkernelpanic.streaming.gl.SurfaceView
+        android:id="@+id/surface"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
