--- a/rtsp-server/src/main/res/layout/activity_main.xml
+++ b/rtsp-server/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
@@ -13,5 +14,13 @@
         android:textAllCaps="false"
         android:onClick="onClickOpenRstpServerPage"
         />
+
+    <LinearLayout
+        android:id="@+id/layout_warraper"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+    </LinearLayout>
 
 </LinearLayout>
