--- a/rtsp-server/src/main/res/layout/activity_main.xml
+++ b/rtsp-server/src/main/res/layout/activity_main.xml
@@ -10,9 +10,17 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="启动server"
+        android:text="启动 rstp server"
         android:textAllCaps="false"
         android:onClick="onClickOpenRstpServerPage"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="扫码"
+        android:textAllCaps="false"
+        android:onClick="onClickOpenQrPage"
         />
 
     <LinearLayout
